Closed
Bug 213273
Opened 22 years ago
Closed 22 years ago
Browser just exits when open a link in a new tab while running with gtk 2.2 and atk libraries
Categories
(Core :: Disability Access APIs, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: leon.sha, Assigned: simford)
References
Details
Attachments
(2 files)
|
5.62 KB,
text/plain
|
Details | |
|
1.53 KB,
patch
|
yuanyi21
:
review+
Henry.Jia
:
superreview+
|
Details | Diff | Splinter Review |
Browser just exits when open a link in a new tab while running with gtk 2.2 and
atk libraries.
Should add simford's patch(already in the trunk) first.
Comment 2•22 years ago
|
||
Leon,
* Does this happen in both the trunk and 1.4 branch?
* Can you try it in older builds to see when the problem began?
Comment 3•22 years ago
|
||
Leon,
1.88 <aaronl@netscape.com> 26 Jun 2003 01:45
Bug 208898. Fire accessible events for interal accessibiltiy clients for all new
documents that are created. r=kyle, sr=jst
Can you test to see if this was the checkin that caused it? Thanks.
I unpatched bug 208898 from trunk. It is not successful.
I have test it on 1.4 branch some time ago. I remember that when loadin the
first tab it's OK, but it failed in the second tab. I am not sure. I will try it
again later.
About the older build, I only have 03/14/2003 build. It's OK.
I tried 1.4 branch.
It will not crash in the first time when open a link is a tab.
But when right click on a link the dialog won't occur. And browser crashed.
The same problem appeared in nsAccessNode::GetCacheEntry.
implement the ATK part of bug 208803
Attachment #128755 -
Flags: review?(kyle.yuan)
Comment on attachment 128755 [details] [diff] [review]
patch
good catch. r=kyle.
Attachment #128755 -
Flags: review?(kyle.yuan) → review+
=> Simford, Jessie
Assignee: aaronl → Simford.Dong
QA Contact: dsirnapalli → jessie.li
Attachment #128755 -
Flags: superreview?(Henry.Jia)
Comment on attachment 128755 [details] [diff] [review]
patch
sr=Henry
Attachment #128755 -
Flags: superreview?(Henry.Jia) → superreview+
| Assignee | ||
Comment 10•22 years ago
|
||
checked in trunk.
Thanks!
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Comment 11•22 years ago
|
||
Thanks for fixing this -- sorry for the dumb mistake.
Comment 12•22 years ago
|
||
Aaron, this is not your mistake. Fixing atk code is our duty.
You need to log in
before you can comment on or make changes to this bug.
Description
•