Bug 213273 Browser just exits when open a link in a new tab while running with gtk 2.2 and atk libraries r=kyle, sr=henry not for default build